--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# uploaded files
+/public/uploads/*
+!/public/uploads/.gitkeep
+
+# crop data overrides
+/src/lib/mock-crops-overrides.json
